--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.password=2145621
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost/studentsbook?serverTimezone=Europe/Warsaw&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/carrental?serverTimezone=Europe/Warsaw&useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
