--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
+
 spring.datasource.password=2145621
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost/carrental?serverTimezone=Europe/Warsaw&useSSL=false
