--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,10 @@
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 
-#spring.datasource.password=
-#spring.datasource.username=root
-#spring.datasource.url=jdbc:mysql://localhost/carrental_test?serverTimezone=Europe/Warsaw&useSSL=false
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=2145621
+spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost/carrental_test?serverTimezone=Europe/Warsaw&useSSL=false
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
