--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.password=2145621
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost/carrental?serverTimezone=Europe/Warsaw&useSSL=false
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
